--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Overpass">
 </head>
 <body>
   <div id="container"></div>
