adding final images

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,10 +1,12 @@
-  
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Field Day</title>
+    <link rel="shortcut icon" href="static/favicon.ico"/>
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Overpass">
 </head>
