updating styling and event simulation

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Field Day</title>
     <link rel="shortcut icon" href="static/favicon.ico"/>
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Overpass">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,300;1,600;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="container"></div>
